# kinova_digital_twin

./: README.md
log/: latest_list
src/kinova_moveit_control/: package.xml  setup.cfg  setup.py
src/kinova_moveit_control/kinova_moveit_control/: robot_control_node.py  robot_monitor_node.py
